<resources>
    <string name="action_settings">Settings</string>
    <string name="bybike">随行单车</string>
    <string name="findbike">找单车</string>
    <string name="current_address">北京市海淀区海淀北二街8号中关村SOHO</string>
    <string name="beijing">北京</string>
    <string name="foot">步行</string>
    <string name="distance">距离</string>
    <string name="each_hour">每小时</string>
    <string name="book">确定预约</string>
    <string name="unlock">输码解锁</string>
    <string name="unlock_auto">自动解锁</string>
    <string name="bike_code">车辆编码</string>
    <string name="book_countdown">保留倒计时</string>
    <string name="bike_sound">车辆发声</string>
    <string name="cancel_book">取消预约</string>
    <string name="cancel_book_toast">超过预约时间，系统已自动结束</string>
    <string name="code_unlock">输码解锁</string>
    <string name="code_prompt">在车锁和车头位置，已有车辆编码</string>
    <string name="unlock_im">立即解锁</string>
    <string name="wallet">我的钱包</string>
    <string name="route">我的行程</string>
    <string name="invite_friend">邀请好友</string>
    <string name="feedback">问题反馈</string>
    <string name="guide">使用指南</string>
    <string name="setting">设置</string>
    <string name="account_ballance">账户余额&#160;0&#160;元</string>
    <string name="transaction_type">请选择交易类型</string>
    <string name="charge_im">马上充值</string>
    <string name="routing">行程中</string>
    <string name="price">0.5元</string>
    <string name="route_detail">行程详情</string>
    <string name="route_replay">轨迹回放</string>
    <string name="my_route">我的行程</string>
    <string name="no_route">您还没有行程</string>
    <string name="net_wifi">现已链接到Wi-Fi网络</string>
    <string name="net_mobile">现已连接到移动网络</string>
    <string name="net_none">现已进入无网世界</string>

    <string name="bike_time">骑行时长</string>
    <string name="bike_distance">骑行距离</string>
    <string name="bike_price">费用计算</string>
    <string name="routing_prompt">手动把车子锁上后，自动结束计费~</string>
    <string name="book_prompt">预约车辆在您靠近时，自动解锁~</string>
    <string name="bike_exception_prompt">如果你发现车子有异常，点击取消</string>
    <string name="end">结束</string>
    <string name="end_route">结束\n行程</string>
    <string name="open_gps">请先打开GPS，提高定位准确度</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="navigation">导航</string>
    <string name="begin_navigation">开始导航</string>
    <string name="my_position">我的位置</string>
    <string name="input_start_place">输入起点</string>
    <string name="input_destination">输入终点</string>
    <string name="please_input_start_place">请输入起点</string>
    <string name="please_input_destination">请输入终点</string>
    <string name="inner_navi">内置导航</string>
    <string name="baidu_navi">百度地图</string>
    <string name="gaode_navi">高德地图</string>

    <string name="customactivityoncrash_error_activity_error_occurred_explanation">一个未知异常出现，抱歉给您带来不便\n请先使用其它功能，我们会尽快修复！</string>
    <string name="customactivityoncrash_error_activity_restart_app">重启</string>
    <string name="customactivityoncrash_error_activity_close_app">关闭</string>
    <string name="customactivityoncrash_error_activity_error_details">错误详情</string>
    <string name="customactivityoncrash_error_activity_error_details_title">错误详情</string>
    <string name="customactivityoncrash_error_activity_error_details_close">关闭</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">复制</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">已复制</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">错误信息</string>


    <string name="demo_title_location">demo_title_location</string>
    <string name="demo_desc_location">demo_desc_location</string>
    <string name="demo_title_geocode">demo_title_geocode</string>
    <string name="demo_desc_geocode">demo_desc_geocode</string>
</resources>
