<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/bike_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="15dp"
        android:src="@mipmap/bike_icon2" />

    <LinearLayout
        android:id="@+id/ll_bike_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_time"
                style="@style/notification_title"
                android:text="@string/bike_time" />

            <TextView
                android:id="@+id/bike_time"
                style="@style/notification_content"
                tools:text="0分钟" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_distance"
                style="@style/notification_title"
                android:text="@string/bike_distance" />

            <TextView
                android:id="@+id/bike_distance"
                style="@style/notification_content"
                tools:text="0米" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_price"
                style="@style/notification_title"
                android:text="@string/bike_price" />

            <TextView
                android:id="@+id/bike_price"
                style="@style/notification_content"
                tools:text="0元" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>