<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.baidu.mapapi.map.MapView
        android:id="@+id/id_bmapView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true" />

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/color_343333">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/bybike"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bike_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_layout"
        android:layout_margin="12dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/current_addr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="8dp"
            android:drawableLeft="@mipmap/location_icon"
            android:paddingLeft="5dp"
            android:text="@string/beijing"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="8dp"
            android:background="#bbbbbb" />

        <LinearLayout
            android:id="@+id/bike_distance_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/text_style"
                    android:text="每小时"
                    android:textColor="@color/color_747474" />

                <TextView
                    style="@style/text_style"
                    android:text="1元" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/text_style"
                    android:text="距离"
                    android:textColor="@color/color_747474" />

                <TextView
                    android:id="@+id/bike_distance"
                    style="@style/text_style"
                    android:text="200米" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/text_style"
                    android:text="步行"
                    android:textColor="@color/color_747474" />

                <TextView
                    android:id="@+id/bike_time"
                    style="@style/text_style"
                    android:text="5分钟" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bike_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/text_style"
                    android:text="@string/bike_code"
                    android:textColor="@color/color_747474" />

                <TextView
                    android:id="@+id/bike_code"
                    style="@style/text_style"
                    android:text="001" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/text_style"
                    android:text="@string/book_countdown"
                    android:textColor="@color/color_747474" />

                <TextView
                    android:id="@+id/book_countdown"
                    style="@style/text_style"
                    android:text="5分59秒" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/confirm_cancel_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/bt_book_selector"
                android:clickable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/bike_sound"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size" />


            <TextView
                android:id="@+id/cancel_book"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/bt_cancel_book_selector"
                android:clickable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/cancel_book"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size" />
        </LinearLayout>


        <TextView
            android:id="@+id/book_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bt_book_selector"
            android:clickable="true"
            android:gravity="center"
            android:padding="10dp"
            android:paddingBottom="1dp"
            android:paddingTop="1dp"
            android:text="@string/book"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <TextView
        android:id="@+id/prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bike_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bt_prompt_selector"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/unlock_auto"
        android:textColor="@color/white_cc"
        android:textSize="15sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/unlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bt_unlock_selector"
        android:clickable="true"
        android:paddingBottom="10dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="10dp"
        android:text="@string/unlock"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp">
        <ImageView
            android:id="@+id/btn_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/refresh_icon"
            android:clickable="true" />
    <ImageView
        android:id="@+id/btn_locale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/get_location_icon"
        android:layout_marginTop="15dp"
        android:clickable="true" />
    </LinearLayout>
</RelativeLayout>
