<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f6f6f6"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_343333"
        android:gravity="bottom"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:onClick="finishActivity"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:src="@mipmap/return_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/wallet"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/charge_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_layout"
        android:layout_margin="15dp"
        android:background="@drawable/code_unlock_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ballance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/account_ballance"
            android:textColor="@color/color_9f9f9f"
            android:textSize="22sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_acount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ballance"
            android:layout_margin="15dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/trancaction_type_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/charge_layout"
        android:layout_margin="15dp"
        android:background="@drawable/code_unlock_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/trancaction_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/transaction_type"
            android:layout_margin="10dp"
            android:textColor="@color/color_9f9f9f"
            android:textSize="16sp" />

        <View style="@style/transaction_type_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:src="@mipmap/weixin" />


        </RelativeLayout>

        <View style="@style/transaction_type_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:src="@mipmap/alipay" />

        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/book_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/trancaction_type_layout"
        android:layout_margin="15dp"
        android:background="@drawable/bt_book_selector"
        android:clickable="true"
        android:gravity="center"
        android:padding="10dp"
        android:paddingBottom="1dp"
        android:paddingTop="1dp"
        android:text="@string/charge_im"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size" />
</RelativeLayout>